--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,38 +3,27 @@
   HTML using MateralizeCSS Design
 -->
 
-<!-- 1. Navagation Bar -->
-<nav class="white" role="navigation">
-  <div class="nav-wrapper container">
-    <i class="fas fa-heartbeat logo"></i>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="#">Navbar Link</a></li>
-    </ul>
-
-    <ul id="nav-mobile" class="sidenav">
-      <li><a href="#">Navbar Link</a></li>
-    </ul>
-    <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-  </div>
-</nav>
-
 <!-- 2. Parallax Container -->
-<div id="index-banner" class="parallax-container">
+<div id="index-banner" class="parallax-container parallax-container-main">
   <div class="section no-pad-bot">
     <div class="container">
       <br><br>
-      <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
-      <div class="row center">
-        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+
+      <section data-aos="fade-up" data-aos-duration="2000"><i class="fas fa-heartbeat logo light-blue-text text-lighten-3"></i> <h1 class="companyName header center light-blue-text text-lighten-5">Some Name For the Site</h1> </section>
+      
+      <div class="row center " data-aos="fade-up"
+     data-aos-duration="1000" data-aos-delay="2000">
+        <h5 class="header col s12 light-blue-text text-lighten-4">Were here to help</h5>
       </div>
       <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1" data-aos="fade-up"
+     data-aos-duration="1000" data-aos-delay="3000">Get Started</a>
       </div>
       <br><br>
 
     </div>
   </div>
-  <div class="parallax"><img src="/images/background1.jpg" alt="Unsplashed background img 1"></div>
+  <div class="parallax"><img src="/images/bvParkTall.png" alt="Unsplashed background img 1"></div>
 </div>
 
 <!-- 3. Info Container 1 -->
