--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
   <!-- _____________________ CSS _____________________ -->
   <!-- Fonts  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Roboto&display=swap" rel="stylesheet">
   <link href="/fontawesome/css/all.css" rel="stylesheet"> 
 
   <!-- Materalize CSS  -->
@@ -17,13 +18,16 @@
   <link href="/css/materialize-style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
   <!-- Other CSS Styling  -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  
 </head>
 
 <body>
   {{{body}}}
   
   <!--  Front End JS Scripts-->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="/js/index.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
