Added Form Functionality where data is stored in Local Storage for later use

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -54,12 +54,12 @@
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800" id="gender">
-            <select>
+          <div class="input-field col s12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800" >
+            <select id="gender">
               <option value="" disabled selected>Choose your option</option>
-              <option value="1">Male</option>
-              <option value="2">Female</option>
-              <option value="3">Perfer Not To say</option>
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
+              <option value="Male">Perfer Not To say</option>
             </select>
             <label>Gender</label>
             <button class="btn waves-effect waves-light" type="submit">Continue
