Completed Body Sel and transferData

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -112,9 +112,7 @@
     </div>
   </footer>
 </section>
-<section id="preloader">
-   
-</section>
+<section id="preloader"></section>
 
 {{!-- Front End Js Scripts --}}
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
