--- a/views/bodySpecific.handlebars
+++ b/views/bodySpecific.handlebars
@@ -1,15 +1,15 @@
 <!-- 
-  Body General Selection Handlebars File 
+  Main Homepage Body Handlebars File 
   HTML using MateralizeCSS Design
 -->
-<section id="bodyGeneral">
+<section id="bodySpecific">
   <div id="index-banner" class="parallax-container parallax-container-sub">
     <div class="section no-pad-bot">
       <div class="container">
         <i class="fas fa-heartbeat logo-sub light-blue-text text-lighten-3">
           <h5 class="companyName header center light-blue-text text-lighten-5">Company Name</h5>
         </i>
-        <h4 class="companyName header center light-blue-text text-lighten-5">Symptom Selector - Body Location</h4>
+        <h4 class="companyName header center light-blue-text text-lighten-5">Symptom Selector - Body Specific Location</h4>
         <br><br>
 
       </div>
@@ -28,8 +28,8 @@
             <option value="{{ID}}">{{Name}}</option>
             {{/each}}
           </select>
-          <label>Body Location Select</label>
-          <button class="btn-large waves-effect waves-light" id="continueGen">Continue
+          <label>Body Specific Location Select</label>
+          <button class="btn-large waves-effect waves-light" type="submit" name="action">Continue
             <i class="material-icons right">send</i>
           </button>
         </div>
@@ -77,11 +77,11 @@
     </div>
   </footer>
 </section>
-<section id="preloader"></section>
+
 {{!-- Front End Js Scripts --}}
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
 <script src="js/init.js"></script>
-<script src="/js/bodyGen.js"></script>
+<script src="/js/bodySpec.js"></script>
