--- a/views/bodyGeneral.handlebars
+++ b/views/bodyGeneral.handlebars
@@ -29,7 +29,7 @@
             {{/each}}
           </select>
           <label>Body Location Select</label>
-          <button class="btn-large waves-effect waves-light" id="continueGen">Continue
+          <button class="btn-large waves-effect waves-light disabled" id="continueGen">Continue
             <i class="material-icons right">send</i>
           </button>
         </div>
