--- a/views/bodySpecific.handlebars
+++ b/views/bodySpecific.handlebars
@@ -29,7 +29,7 @@
             {{/each}}
           </select>
           <label>Body Specific Location Select</label>
-          <button class="btn-large waves-effect waves-light" type="submit" name="action">Continue
+          <button class="btn-large waves-effect waves-light disabled" type="submit" name="action" id="continueSpec">Continue
             <i class="material-icons right">send</i>
           </button>
         </div>
@@ -77,7 +77,7 @@
     </div>
   </footer>
 </section>
-
+<section id="preloader"></section>
 {{!-- Front End Js Scripts --}}
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
