--- a/views/bodyGeneral.handlebars
+++ b/views/bodyGeneral.handlebars
@@ -79,9 +79,5 @@
 </section>
 <section id="preloader"></section>
 {{!-- Front End Js Scripts --}}
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="js/materialize.js"></script>
-<script src="js/init.js"></script>
+{{> scripts/scripts}}
 <script src="/js/bodyGen.js"></script>
