--- a/views/bodySpecific.handlebars
+++ b/views/bodySpecific.handlebars
@@ -2,81 +2,50 @@
   Body Specific Handlebars File 
   HTML using MateralizeCSS Design
 -->
-<section id="bodySpecific">
-  <div id="index-banner" class="parallax-container parallax-container-sub">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <i class="fas fa-heartbeat logo-sub light-blue-text text-lighten-3">
-          <h5 class="companyName header center light-blue-text text-lighten-5">Company Name</h5>
-        </i>
-        <h4 class="companyName header center light-blue-text text-lighten-5">Symptom Selector - Body Specific Location</h4>
-        <br><br>
+<main>
+  <section id="bodySpecific">
+    <div id="index-banner" class="parallax-container parallax-container-sub">
+      <div class="section no-pad-bot">
+        <div class="container">
+          <i class="fas fa-heartbeat logo-sub light-blue-text text-lighten-3">
+            <h5 class="companyName header center light-blue-text text-lighten-5">Dipmat Med</h5>
+          </i>
+          <h4 class="companyName header center light-blue-text text-lighten-5">Symptom Selector - Body Specific Location
+          </h4>
+          <br><br>
 
-      </div>
-    </div>
-    <div class="parallax"><img src="/images/ggBridge.png" alt="Unsplashed background img 1"></div>
-  </div>
-
-  <!-- 3. Info Container 1 -->
-  <div class="container">
-    <div class="section">
-      <div class="row">
-        <div class="input-field col s8">
-          <select id="bodySelect">
-            <option value="" disabled selected>Choose Area of Symptom</option>
-            {{#each locations}}
-            <option value="{{ID}}">{{Name}}</option>
-            {{/each}}
-          </select>
-          <label>Body Specific Location Select</label>
-          <button class="btn-large waves-effect waves-light disabled" type="submit" name="action" id="continueSpec">Continue
-            <i class="material-icons right">send</i>
-          </button>
-        </div>
-        <div class="col s4"><img class="materialboxed" id="bodyVector" width="650" src="/images/BodyVectors/Empty.png">
         </div>
       </div>
+      <div class="parallax"><img src="/images/ggBridge.png" alt="Unsplashed background img 1"></div>
     </div>
-  </div>
-  <footer class="page-footer teal">
+
+    <!-- 3. Info Container 1 -->
     <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our
-            full
-            time job. Any amount would help support and continue development on this project and is greatly appreciated.
-          </p>
-
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
+      <div class="section">
+        <div class="row">
+          <div class="input-field col s8">
+            <select id="bodySelect">
+              <option value="" disabled selected>Choose Area of Symptom</option>
+              {{#each locations}}
+              <option value="{{ID}}">{{Name}}</option>
+              {{/each}}
+            </select>
+            <label>Body Specific Location Select</label>
+            <button class="btn-large waves-effect waves-light disabled" type="submit" name="action"
+              id="continueSpec">Continue
+              <i class="material-icons right">send</i>
+            </button>
+          </div>
+          <div class="col s4"><img class="materialboxed" id="bodyVector" width="650"
+              src="/images/BodyVectors/Empty.png">
+          </div>
         </div>
       </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-        Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-      </div>
-    </div>
-  </footer>
-</section>
+  </section>
+  <section id="preloader"></section>
+</main>
+
+{{> sections/footer}}
 <section id="preloader"></section>
 {{!-- Front End Js Scripts --}}
 {{> scripts/scripts}}
