--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,118 +2,88 @@
   Main Homepage Body Handlebars File 
   HTML using MateralizeCSS Design
 -->
-<section id="homePage">
-  <!-- 2. Parallax Container -->
+<main>
+  <section id="homePage">
+    <!-- 2. Parallax Container -->
 
-  <div id="index-banner" class="parallax-container parallax-container-main">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
+    <div id="index-banner" class="parallax-container parallax-container-main">
+      <div class="section no-pad-bot">
+        <div class="container">
+          <br><br>
 
-        <section data-aos="fade-up" data-aos-duration="2000">
-          <i class="fas fa-heartbeat logo light-blue-text text-lighten-3"></i>
-          <h1 class="companyName header center light-blue-text text-lighten-5">Some Name For the Site</h1>
-        </section>
+          <section data-aos="fade-up" data-aos-duration="2000">
+            <i class="fas fa-heartbeat logo light-blue-text text-lighten-3"></i>
+            <h1 class="companyName header center light-blue-text text-lighten-5">Dipmat Med</h1>
+          </section>
 
-        <div class="row center " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="2000">
-          <h5 class="header col s12 light-blue-text text-lighten-4">Were here to help</h5>
+          <div class="row center " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="2000">
+            <h5 class="header col s12 light-blue-text text-lighten-4">Sick, Hurt?</h5>
+          </div>
+          <div class="row center " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="2000">
+            <h5 class="header col s12 light-blue-text text-lighten-4">Were here to help</h5>
+          </div>
+
+          <div class="row center">
+            <a href="#aboutyou" id="download-button" class="btn-large waves-effect waves-light teal lighten-1"
+              data-aos="fade-up" data-aos-duration="1000" data-aos-delay="3000">Get Started</a>
+          </div>
+          <br><br>
+
         </div>
-        <div class="row center">
-          <a href="#aboutyou" id="download-button" class="btn-large waves-effect waves-light teal lighten-1"
-            data-aos="fade-up" data-aos-duration="1000" data-aos-delay="3000">Get Started</a>
-        </div>
-        <br><br>
-
       </div>
+      <div class="parallax"><img src="/images/bvParkTall.png" alt="Unsplashed background img 1"></div>
     </div>
-    <div class="parallax"><img src="/images/bvParkTall.png" alt="Unsplashed background img 1"></div>
-  </div>
 
-  <!-- 3. Info Container 1 -->
-  <div class="container">
-    <div class="section">
-
-      <!--   Icon Section   -->
-      <h5 id="aboutyou" class="center light brown-text scrollspy" data-aos="fade-up" data-aos-duration="1000">About
-        You
-      </h5>
-      <div class="row">
-        <form class="col s12 about-me">
-          <div class="row">
-            <div class="input-field col s6" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-              <input id="first_name" type="text" class="validate">
-              <label for="first_name">First Name</label>
-            </div>
-            <div class="input-field col s6" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
-              <input id="last_name" type="text" class="validate">
-              <label for="last_name">Last Name</label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="input-field col s12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-              <input id="birthYear" type="text" class="validate">
-              <label for="birthYear">Year of Birth</label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="input-field col s12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
-              <select id="gender">
-                <option value="" disabled selected>Choose your option</option>
-                <option value="Male">Male</option>
-                <option value="Female">Female</option>
-                <option value="Male">Perfer Not To say</option>
-              </select>
-              <label>Gender</label>
-              <button class="btn waves-effect waves-light" type="submit">Continue
-              </button>
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <footer class="page-footer teal">
+    <!-- 3. Info Container 1 -->
     <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our
-            full
-            time job. Any amount would help support and continue development on this project and is greatly
-            appreciated.
-          </p>
+      <div class="section">
 
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
+        <!--   Icon Section   -->
+        <h5 id="aboutyou" class="center light brown-text scrollspy" data-aos="fade-up" data-aos-duration="1000">About
+          You
+        </h5>
+        <p class="center genText grey-text" data-aos="fade-up" data-aos-duration="1000">Before we can help you, we need
+          to learn a bit about you!</p>
+        <div class="row">
+          <form class="col s12 about-me">
+            <div class="row">
+              <div class="input-field col s6" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                <input id="first_name" type="text" class="validate">
+                <label for="first_name">First Name (Optional)</label>
+              </div>
+              <div class="input-field col s6" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                <input id="last_name" type="text" class="validate">
+                <label for="last_name">Last Name (Optional)</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+                <input id="birthYear" type="text" class="validate">
+                <label for="birthYear">Year of Birth (Optional)</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
+                <select id="gender">
+                  <option value="" disabled selected>Choose your option</option>
+                  <option value="Male">Male</option>
+                  <option value="Female">Female</option>
+                  <option value="Male">Perfer Not To say</option>
+                </select>
+                <label>Gender (Selection Required)</label>
+                <button class="btn waves-effect waves-light disabled" type="submit" id="contBtn">Continue
+                </button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
-    <div class="footer-copyright">
-      <div class="container">
-        Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-      </div>
-    </div>
-  </footer>
-</section>
-<section id="preloader"></section>
+    </section>
+    <section id="preloader"></section>
+</main>
+{{> sections/footer}}
 
 {{!-- Front End Js Scripts --}}
 {{> scripts/scripts}}
-<script src="/js/homepage.js"></script> 
+<script src="/js/homepage.js"></script>
