--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Health-Checker</title>
+  <link rel="icon" href="/images/HeartbeatIcon.png">
 
   <!-- _____________________ CSS _____________________ -->
   <!-- Fonts  -->
