Added some formatting to code

--- a/views/bodySymptoms.handlebars
+++ b/views/bodySymptoms.handlebars
@@ -29,8 +29,8 @@
                             <div class="col s12 symptomsContainer">
                                 <label for=".symptomsContainer">Choose a symptom you are experiencing</label><br>
                                 {{#each symptoms}}
-                                <button class="waves-effect waves-light btn-small buttonSpacing sympBtn"
-                                    value="{{ID}}" name="{{Name}}">{{Name}}</button>
+                                <button class="waves-effect waves-light btn-small buttonSpacing sympBtn" value="{{ID}}"
+                                    name="{{Name}}">{{Name}}</button>
                                 {{/each}}
                             </div>
                         </div>
