--- a/views/diagPage.handlebars
+++ b/views/diagPage.handlebars
@@ -1,5 +1,5 @@
 <!-- 
-  Body Proposed Symptoms Handlebars File 
+  Final Diagnosis Handlebars File 
   HTML using MateralizeCSS Design
 -->
 <main>
