--- a/views/proposedSymptoms.handlebars
+++ b/views/proposedSymptoms.handlebars
@@ -1,5 +1,5 @@
 <!-- 
-  Body Proposed Symptoms Handlebars File 
+  Proposed Symptoms Handlebars File 
   HTML using MateralizeCSS Design
 -->
 <main>
