Removed random percent

--- a/views/diagPage.handlebars
+++ b/views/diagPage.handlebars
@@ -33,7 +33,7 @@
                                                        <div class="card-content white-text" value="{{inc @index}}">
                                                             <span class="card-title">Diagnosis {{inc @index}}</span>
                                                             <p>Proposed Condition: {{Issue.Name}}</p>
-                                                            <p>Professional Name: {{Issue.ProfName}}%</p>
+                                                            <p>Professional Name: {{Issue.ProfName}}</p>
                                                             <p>Accuracy: {{Issue.Accuracy}}%</p>
                                                             <p>Specializations: {{#each Specialisation}}
                                                                  {{Name}},
