--- a/views/diagnosisstats.handlebars
+++ b/views/diagnosisstats.handlebars
@@ -16,8 +16,7 @@
             </thead>
 
             <tbody>
-              {{#each diagnosisResults}}
-
+              {{#each diagnosisResults.all}}
               <tr>
                 <td>{{this.name}}</td>
                 <td>{{this.city}}</td>
@@ -27,6 +26,31 @@
 
             </tbody>
           </table>
+
+          <canvas id="myChart"></canvas>
+          <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+          <script>
+            
+            var ctx = document.getElementById('myChart').getContext('2d');
+            var chart = new Chart(ctx, {
+              // The type of chart we want to create
+              type: 'line',
+              
+              // The data for our dataset
+              data: {
+                labels: ['HIV', 'Arthritis', 'Heart Diseas', 'cancer', 'Asthma', 'Flue', 'cold'],
+                datasets: [{
+                  label: 'My First dataset',
+                  backgroundColor: 'rgb(255, 99, 132)',
+                  borderColor: 'rgb(255, 99, 132)',
+                  data: [0, 10, 5, 2, 20, 30, 45]
+                }]
+              },
+
+              // Configuration options go here
+              options: {}
+            });
+          </script>
 
 
           <a href="/">← Back To Home</a>
