--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -55,6 +55,10 @@
                 <input id="last_name" type="text" class="validate">
                 <label for="last_name">Last Name (Optional)</label>
               </div>
+              <div class="input-field col s6" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                <input id="city_name" type="text" class="validate">
+                <label for="city_name">City Name (Optional)</label>
+              </div>
             </div>
             <div class="row">
               <div class="input-field col s12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
