--- a/views/diagPage.handlebars
+++ b/views/diagPage.handlebars
@@ -30,7 +30,7 @@
                                         <div class="row">
                                              <div class="col s12">
                                                   <div class="card blue-grey darken-1">
-                                                       <div class="card-content white-text" value="{{inc @index}}">
+                                                       <div class="card-content white-text" id="diag{{inc @index}}" value="{{Issue.ID}}" name="{{Issue.Name}}" acc="{{Issue.Accuracy}}">
                                                             <span class="card-title">Diagnosis {{inc @index}}</span>
                                                             <p>Proposed Condition: {{Issue.Name}}</p>
                                                             <p>Professional Name: {{Issue.ProfName}}</p>
@@ -44,6 +44,7 @@
                                              </div>
                                         </div>
                                         {{/each}}
+                                        <a class="waves-effect waves-light btn" href="/diagnosisstats">Check Diagnosis Stats</a>
                                    </div>
                               </div>
                          </div>
