--- a/views/diagnosisstats.handlebars
+++ b/views/diagnosisstats.handlebars
@@ -1,3 +1,19 @@
+<div id="index-banner" class="parallax-container parallax-container-sub2">
+  <div class="section no-pad-bot">
+    <div class="container">
+      <i class="fas fa-heartbeat logo-sub light-blue-text text-lighten-3">
+        <h5 class="companyName header center light-blue-text text-lighten-5">Dipmat Med</h5>
+      </i>
+      <h4 class="companyName header center light-blue-text text-lighten-5">Symptom Selector -
+        Diagnosis Stats</h4>
+      <br><br>
+
+    </div>
+  </div>
+  <div class="parallax"><img src="/images/ggBridge.png" alt="Unsplashed background img 1"></div>
+</div>
+
+
 <div class="container">
   <div class="row">
     <div class="col-8 offset-2">
@@ -30,17 +46,17 @@
           <canvas id="myChart"></canvas>
           <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
           <script>
-            
+
             var ctx = document.getElementById('myChart').getContext('2d');
             var chart = new Chart(ctx, {
               // The type of chart we want to create
               type: 'line',
-              
+
               // The data for our dataset
               data: {
-                labels: ['HIV', 'Arthritis', 'Heart Diseas', 'cancer', 'Asthma', 'Flue', 'cold'],
+                labels: ['HIV', 'Arthritis', 'Heart Disease', 'Cancer', 'Asthma', 'Flu', 'Cold'],
                 datasets: [{
-                  label: 'My First dataset',
+                  label: 'Conditional Stats',
                   backgroundColor: 'rgb(255, 99, 132)',
                   borderColor: 'rgb(255, 99, 132)',
                   data: [0, 10, 5, 2, 20, 30, 45]
@@ -53,9 +69,12 @@
           </script>
 
 
-          <a href="/">← Back To Home</a>
+          <a href="/getDiag">← Back To Diagnosis</a>
         </div>
       </div>
     </div>
   </div>
 </div>
+{{> sections/footer}}
+{{!-- Front End Js Scripts --}}
+{{> scripts/scripts}}
